Revision history for File::DataClass

0.14.429 2013-01-07
         - Updated copyright year
         - Updated POD in IO.pm
         - Fixed bug in IO::rmdir. Now throws on error
         - Modernised t/10io.t

0.13.428 2013-01-06
         - Documented the limitations of MSWin32 and Cygwin platforms

0.13.427 2012-12-30
         - Binmode on by default on ntfs

0.13.424 2012-12-21
         - Started using Sub::Exporter::Progressive
         - Functions is_stale always true on MSWin32, so no mtime no caching
         - Stopped using is_file when I mean exists

0.13.422 2012-12-19
         - Passing io.t on win32. So now the remaining errors

0.13.421 2012-12-14
         - Tried to fix tests on win32

0.13.420 2012-12-12
         - Tried to fix tests on win32
         - F::DC::Schema load and dump are now also class methods

0.13.418 2012-11-13
         - Updated inc::Bob to 1.7. Removed defined ors

0.13.416 2012-11-07
         - Updated inc::Bob to 1.6
         - Fixed nasty bug in IO::umask_pop
         - Added IO::parent

0.12.411 2012-10-27
         - Fixed write filter bug in XML::Bare

0.12.409 2012-09-06
         - Added missing dependency on parent
         - Abstract and description POD fix for F:D:Functions

0.12.406 2012-09-02
         - Removed deprecated ioc_obj attribute
         - Allow CPAN testing to run on more platforms
         - Removed dependency on IPC::SRLock
         - Added spelling tests
         - Updated inc::Bob to 1.5
         - Changed OS unsupported message in inc/CPANTesting

0.11.401 2012-07-10
         - Added email_address method to F::MailAlias
         - Add class attribute to F::DC::Exception
         - F::DC::Storage::WithLanguage does not throw if no lang dep updates
         - Fixed F::Gettext::Storage::PO using name for msgid
         - Fixed gettext caching in F::DC::Storage::WithLanguage
         - Fixed bug in F::DC::HashMerge. Will update undef to 0
         - Made EXTENSIONS available in F::DC::Schema