@@ -16,8 +16,6 @@ BEGIN {
 
    $current and $current->notes->{stop_tests}
             and plan skip_all => $current->notes->{stop_tests};
-
-   plan tests => 4;
 }
 
 use File::DataClass::IO;
@@ -30,7 +28,7 @@ my $args   = { path        => catfile( qw(t shadow) ),
                tempdir     => q(t) };
 my $schema = File::UnixAuth->new( $args );
 
-isa_ok( $schema, q(File::UnixAuth) );
+isa_ok $schema, q(File::UnixAuth);
 
 my $dumped = catfile( qw(t dumped.shadow) ); io( $dumped )->unlink;
 my $data   = $schema->load;
@@ -39,17 +37,38 @@ $schema->dump( { data => $data, path => $dumped } );
 
 my $diff = diff catfile( qw(t shadow) ), $dumped;
 
-ok( !$diff, 'Load and dump roundtrips' ); io( $dumped )->unlink;
+ok !$diff, 'Shadow - load and dump roundtrips'; io( $dumped )->unlink;
 
 $schema->dump( { data => $schema->load, path => $dumped } );
 
 $diff = diff catfile( qw(t shadow) ), $dumped;
 
-ok( !$diff, 'Load and dump roundtrips 2' );
+ok !$diff, 'Shadow - load and dump roundtrips 2'; io( $dumped )->unlink;
+
+$args   = { path               => catfile( qw(t passwd) ),
+            source_name        => q(passwd),
+            storage_attributes => { encoding => q(UTF-8), },
+            tempdir            => q(t) };
+$schema = File::UnixAuth->new( $args );
+$dumped = catfile( qw(t dumped.passwd) ); io( $dumped )->unlink;
+$data   = $schema->load;
+
+$schema->dump( { data => $data, path => $dumped } );
+
+$diff   = diff catfile( qw(t passwd) ), $dumped;
+
+ok !$diff, 'Passwd - load and dump roundtrips'; io( $dumped )->unlink;
+
+$schema->dump( { data => $schema->load, path => $dumped } );
+
+$diff = diff catfile( qw(t passwd) ), $dumped;
+
+ok !$diff, 'Passwd - load and dump roundtrips 2'; io( $dumped )->unlink;
+
+done_testing;
 
 # Cleanup
 
-io( $dumped )->unlink;
 io( catfile( qw(t ipc_srlock.lck) ) )->unlink;
 io( catfile( qw(t ipc_srlock.shm) ) )->unlink;
 io( catfile( qw(t file-dataclass-schema.dat) ) )->unlink;
