@@ -1,0 +1,37 @@
+root:x:0:0:root:/root:/bin/pdksh
+daemon:x:1:1:daemon:/usr/sbin:/bin/sh
+bin:x:2:2:bin:/bin:/bin/sh
+sys:x:3:3:sys:/dev:/bin/sh
+sync:x:4:65534:sync:/bin:/bin/sync
+games:x:5:60:games:/usr/games:/bin/sh
+man:x:6:12:man:/var/cache/man:/bin/sh
+lp:x:7:7:lp:/var/spool/lpd:/bin/sh
+mail:x:8:8:mail:/var/mail:/bin/sh
+news:x:9:9:news:/var/spool/news:/bin/sh
+uucp:x:10:10:uucp:/var/spool/uucp:/bin/sh
+proxy:x:13:13:proxy:/bin:/bin/sh
+www-data:x:33:33:www-data:/var/www:/bin/sh
+backup:x:34:34:backup:/var/backups:/bin/sh
+list:x:38:38:Mailing Manager:/var/list:/bin/sh
+irc:x:39:39:ircd:/var/run/ircd:/bin/sh
+nobody:x:65534:65534:nobody:/nonexistent:/bin/sh
+libuuid:x:100:101:libuuid:/var/lib/libuuid:/bin/sh
+Debian-exim:x:101:103:Debian-exim:/var/spool/exim4:/bin/false
+statd:x:102:65534:statd:/var/lib/nfs:/bin/false
+messagebus:x:103:107:messagebus:/var/run/dbus:/bin/false
+haldaemon:x:106:115:Hardware layer:/var/run/hald:/bin/false
+postgres:x:107:118:PostgreSQL administrator:/var/lib/postgresql:/bin/bash
+saned:x:108:119:saned:/home/saned:/bin/false
+hplip:x:109:7:HPLIP user:/var/run/hplip:/bin/false
+usbmux:x:110:46:usbmux daemon:/home/usbmux:/bin/false
+privoxy:x:111:65534:privoxy:/etc/privoxy:/bin/false
+debian-tor:x:112:100:debian-tor:/var/lib/tor:/bin/bash
+mysql:x:114:121:MySQL Server:/var/lib/mysql:/bin/false
+ntp:x:115:122:ntp:/home/ntp:/bin/false
+rabbitmq:x:116:123:RabbitMQ server:/var/lib/rabbitmq:/bin/false
+vde2-net:x:117:125:vde2-net:/var/run/vde2:/bin/false
+sshd:x:118:65534:sshd:/var/run/sshd:/usr/sbin/nologin
+pjf:x:1000:1000:Peter Flanigan,Lounge,123456,12345678:/home/pjf:/bin/ksh
+guest:x:1001:1003:Guest Account:/home/guest:/bin/sh
+dropbox:x:1002:1004:Dropbox Syncer:/home/dropbox:/bin/bash
+mcp:x:1003:1000:Master Progråm:/home/mcp:/bin/bash
